# tiktok-toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  auth_server.py  cli.py  loading_spinner.py  logger.py  main.py  overview.txt  pyproject.toml  requirements.txt  sample_candidates.json  security.py
.github/: CODEOWNERS
examples/: sample_report.md
scripts/: check_pii_handling.py  check_tos_compliance.py
tabs/: __init__.py  anomaly.py  forensics.py  impersonation.py  main.py  privacy.py  privacy_general.py  privacy_geolocation.py  stalkerware.py
tests/: test_impersonation_detection.py  test_ui_threading.py
