[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiktok-toolkit"
version = "1.0.0"
description = "TikTok Cybersecurity Analysis Platform - Privacy, Forensics, and Threat Detection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TikTok Toolkit Team", email = "security@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.4",
    "PySide6>=6.6.0",
    "cryptography>=41.0.7",
    "python-Levenshtein>=0.23.0",
    "imagehash>=4.3.1",
    "Pillow>=10.1.0",
    "scikit-learn>=1.3.2",
    "geotext>=0.4.0",
    "pyap>=0.3.2",
    "libsodium>=0.7.12",
    "opencv-python>=4.8.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "pre-commit>=3.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
tiktok-toolkit = "main:main"

[project.urls]
Homepage = "https://github.com/your-org/tiktok-toolkit"
Repository = "https://github.com/your-org/tiktok-toolkit"
Documentation = "https://github.com/your-org/tiktok-toolkit#readme"
Issues = "https://github.com/your-org/tiktok-toolkit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tabs*"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PySide6.*",
    "cv2.*",
    "libsodium.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests that require GUI",
]
